--- a/Aula_4_Atividade/web/assets/css/style.css
+++ b/Aula_4_Atividade/web/assets/css/style.css
@@ -1,10 +1,6 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 23 de ago. de 2021, 17:32:41
-    Author     : FERNANDADEMOURACRUZ
-*/
+*{
+    font-family:Arial;
+    text-align: justify;
+    
+};
 
