--- a/Aula_4_Atividade/web/assets/css/style.css
+++ b/Aula_4_Atividade/web/assets/css/style.css
@@ -1,6 +1,14 @@
 *{
     font-family:Arial;
     text-align: justify;
+    line-height: 25px;
+    
     
 };
 
+form{
+    margin: 30px;
+    background-color:white;    
+    padding: 10px;
+    box-shadow: 2px 2px 2px 2px rgb(59, 59, 59);
+};
