--- a/JavaEEJSP_Calendar/web/assets/css/style.css
+++ b/JavaEEJSP_Calendar/web/assets/css/style.css
@@ -77,7 +77,7 @@ form{
     font-size: 15px;
     padding: 10px;
     border: none;
-    color: #ffff;
+    color: #fff;
     border-radius: 5px 5px 5px 5px;
     box-shadow: 5px 5px 5px #151515;
     
@@ -87,15 +87,16 @@ form{
     width: 150px;
 }
 
-form input{
+form input, .select-month{
     border:none;
     border-radius: 5px;
     text-align:center;
     margin: 10px;
 }
 
+
 .fields{
-    color:#00000;
+    color:#000;
 }
 
 .calendar{
